更新 crm 骨架代码